add annotation, rebuild common package