@@ -11,7 +11,6 @@ import org.manageyourlog.server.dao.mysql.model.LogRecordIndexMysqlPO;
 import org.manageyourlog.server.dao.mysql.model.LogRecordMysqlPO;
 import org.manageyourlog.server.model.LogRecord;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.Conditional;
 import org.springframework.stereotype.Repository;
 
 import java.time.LocalDateTime;
@@ -29,7 +28,7 @@ import java.util.stream.Collectors;
 @ReceiveLogDaoLoadCondition(mode = StoreMode.Mysql)
 public class LogRecordMysqlRepository implements LogRecordRepository{
 
-    public static final String indexSplitCharacter = ",";
+    public static final String INDEX_SPLIT_CHARACTER = ",";
 
     @Autowired
     private MysqlDatasourceOperate mysqlDatasourceOperate;
@@ -37,58 +36,58 @@ public class LogRecordMysqlRepository implements LogRecordRepository{
     @Override
     public boolean save(LogRecord logRecord) {
         ImmutablePair<LogRecordMysqlPO, List<LogRecordIndexMysqlPO>> logInfos = MysqlEntityBuilder.getInstance().convertToPo(logRecord);
-        return mysqlDatasourceOperate.executeDML(LogRecordMapper.class, (mapper) -> mapper.insert(logInfos.getLeft()) == 1, false)
-                && mysqlDatasourceOperate.executeDML(LogRecordIndexMapper.class, (mapper) -> mapper.batchInsert(logInfos.getRight()) == logInfos.getRight().size(), true);
+        return mysqlDatasourceOperate.executeDML(LogRecordMapper.class, mapper -> mapper.insert(logInfos.getLeft()) == 1, false)
+                && mysqlDatasourceOperate.executeDML(LogRecordIndexMapper.class, mapper -> mapper.batchInsert(logInfos.getRight()) == logInfos.getRight().size(), true);
     }
 
     @Override
     public boolean save(List<LogRecord> logRecords) {
         List<ImmutablePair<LogRecordMysqlPO, List<LogRecordIndexMysqlPO>>> logInfos = MysqlEntityBuilder.getInstance().convertToPo(logRecords);
-        List<LogRecordMysqlPO> logRecordPos = logInfos.stream().map(ImmutablePair::getLeft).collect(Collectors.toList());
-        List<LogRecordIndexMysqlPO> logRecordIndexPos = logInfos.stream().map(ImmutablePair::getRight).flatMap(Collection::stream).collect(Collectors.toList());
-        return mysqlDatasourceOperate.executeDML(LogRecordMapper.class, (mapper) -> mapper.batchInsert(logRecordPos) == logRecordPos.size(), false)
-                && mysqlDatasourceOperate.executeDML(LogRecordIndexMapper.class, (mapper) -> mapper.batchInsert(logRecordIndexPos) == logRecordIndexPos.size(), true);
+        List<LogRecordMysqlPO> logRecordPos = logInfos.stream().map(ImmutablePair::getLeft).toList();
+        List<LogRecordIndexMysqlPO> logRecordIndexPos = logInfos.stream().map(ImmutablePair::getRight).flatMap(Collection::stream).toList();
+        return mysqlDatasourceOperate.executeDML(LogRecordMapper.class, mapper -> mapper.batchInsert(logRecordPos) == logRecordPos.size(), false)
+                && mysqlDatasourceOperate.executeDML(LogRecordIndexMapper.class, mapper -> mapper.batchInsert(logRecordIndexPos) == logRecordIndexPos.size(), true);
     }
 
     @Override
     public List<LogRecord> getByIndex(String index) {
-        List<LogRecordIndexMysqlPO> indexPoList = mysqlDatasourceOperate.executeDQL(LogRecordIndexMapper.class, (mapper) -> mapper.getByIndex(index));
+        List<LogRecordIndexMysqlPO> indexPoList = mysqlDatasourceOperate.executeDQL(LogRecordIndexMapper.class, mapper -> mapper.getByIndex(index));
         return getIndexListByIndexList(indexPoList);
     }
 
     @Override
     public List<LogRecord> getByTime(LocalDateTime startTime, LocalDateTime endTime) {
-        List<LogRecordMysqlPO> logRecordMysqlPoList = mysqlDatasourceOperate.executeDQL(LogRecordMapper.class, (mapper) -> mapper.getByTime(startTime, endTime));
+        List<LogRecordMysqlPO> logRecordMysqlPoList = mysqlDatasourceOperate.executeDQL(LogRecordMapper.class, mapper -> mapper.getByTime(startTime, endTime));
         //get all index id which is related to log record
         List<String> indexIds = getIndexIdFromRecordList(logRecordMysqlPoList);
         //get all index by index id
-        List<LogRecordIndexMysqlPO> indexMysqlPOS = mysqlDatasourceOperate.executeDQL(LogRecordIndexMapper.class, (mapper) -> mapper.getByIndexIds(indexIds));
-        return MysqlEntityBuilder.getInstance().convertToModel(logRecordMysqlPoList, indexMysqlPOS);
+        List<LogRecordIndexMysqlPO> indexMysqlList = mysqlDatasourceOperate.executeDQL(LogRecordIndexMapper.class, mapper -> mapper.getByIndexIds(indexIds));
+        return MysqlEntityBuilder.getInstance().convertToModel(logRecordMysqlPoList, indexMysqlList);
     }
 
     @Override
     public List<LogRecord> getByIndexAndTime(String index, LocalDateTime startTime, LocalDateTime endTime) {
-        List<LogRecordIndexMysqlPO> indexMysqlPOList = mysqlDatasourceOperate.executeDQL(LogRecordIndexMapper.class, (mapper) -> mapper.getByIndexAndTime(index, startTime, endTime));
-        return getIndexListByIndexList(indexMysqlPOList);
+        List<LogRecordIndexMysqlPO> indexMysqlList = mysqlDatasourceOperate.executeDQL(LogRecordIndexMapper.class, mapper -> mapper.getByIndexAndTime(index, startTime, endTime));
+        return getIndexListByIndexList(indexMysqlList);
     }
 
-    private List<LogRecord> getIndexListByIndexList(List<LogRecordIndexMysqlPO> indexMysqlPOList){
+    private List<LogRecord> getIndexListByIndexList(List<LogRecordIndexMysqlPO> sourceIndexMysqlList){
         //get all record id from index list
-        List<String> recordIds = indexMysqlPOList.stream().map(LogRecordIndexMysqlPO::getLogRecordId).collect(Collectors.toList());
+        List<String> recordIds = sourceIndexMysqlList.stream().map(LogRecordIndexMysqlPO::getLogRecordId).toList();
         //get record by id from database
-        List<LogRecordMysqlPO> logRecordMysqlPoList = mysqlDatasourceOperate.executeDQL(LogRecordMapper.class, (mapper) -> mapper.getById(recordIds));
+        List<LogRecordMysqlPO> logRecordMysqlPoList = mysqlDatasourceOperate.executeDQL(LogRecordMapper.class, mapper -> mapper.getById(recordIds));
         //get all index id which is related to log record
         List<String> indexIds = getIndexIdFromRecordList(logRecordMysqlPoList);
         //get all index by index id
-        List<LogRecordIndexMysqlPO> indexMysqlPOS = mysqlDatasourceOperate.executeDQL(LogRecordIndexMapper.class, (mapper) -> mapper.getByIndexIds(indexIds));
-        return MysqlEntityBuilder.getInstance().convertToModel(logRecordMysqlPoList, indexMysqlPOS);
+        List<LogRecordIndexMysqlPO> indexMysqlList = mysqlDatasourceOperate.executeDQL(LogRecordIndexMapper.class, mapper -> mapper.getByIndexIds(indexIds));
+        return MysqlEntityBuilder.getInstance().convertToModel(logRecordMysqlPoList, indexMysqlList);
     }
 
-    private List<String> getIndexIdFromRecordList(List<LogRecordMysqlPO> recordMysqlPOS){
-        return recordMysqlPOS.stream()
+    private List<String> getIndexIdFromRecordList(List<LogRecordMysqlPO> recordMysqlList){
+        return recordMysqlList.stream()
                 .map(LogRecordMysqlPO::getIndexIds)
-                .map(indexId -> Arrays.stream(indexId.split(indexSplitCharacter)).collect(Collectors.toList()))
+                .map(indexId -> Arrays.stream(indexId.split(INDEX_SPLIT_CHARACTER)).collect(Collectors.toList()))
                 .flatMap(Collection::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
